--- a/frontend/nextcp-ui/src/scss/app-styles.scss
+++ b/frontend/nextcp-ui/src/scss/app-styles.scss
@@ -11,6 +11,9 @@
     --footer-heihgt: 5rem;
     --sidebar-width: 250px;
     --nav-height   : 75px;
+
+    // ViewHeight fix
+    --vh: 1vh; // Fallback units    
 }
 
 //
