--- a/frontend/nextcp-ui/src/styles.scss
+++ b/frontend/nextcp-ui/src/styles.scss
@@ -39,4 +39,5 @@ html,
 body {
     margin  : 0;
     height  : 100%;
+    background-color: black;
 }
